# ccpay-human-commander

./: Cargo.toml  README.md  connect_bt.sh  reset_bt.sh
src/: cli.rs  hid.rs  l2cap.rs  macros.rs  main.rs  profile.rs  sdp.rs
src/hid/: mouse.rs
